# CipherClip

./: build_output.txt  convert-sharp.cjs  crop_logo.cjs  find_recycle.ps1  generate-icon.cjs  index.html  jobs.json  lint_output.txt  package-lock.json  package.json  render.html  runs.json  test.txt.sig  verify-icon.cjs
.github/workflows/: build-all.yml
src/: App.tsx  index.css  main.tsx
src-tauri/: 2  Cargo.toml  tauri.conf.json  test.rs
src-tauri/capabilities/: default.json  mobile.json
src-tauri/icons/: icon.icns
src-tauri/src/: clipboard.rs  crypto.rs  db.rs  dib.rs  image_util.rs  lib.rs  network.rs  settings.rs  storage.rs  test_ndk.rs  test_sync.rs
src-tauri/src/tests/: data_plane_tests.rs  e2e_cluster_tests.rs  sync_protocol_tests.rs
src-tauri/test_sync.db/: history.db
