[package]
name = "app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.6.2", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.11.2", features = ["tray-icon"] }
tauri-plugin-log = "2"
rusqlite = { version = "0.40.1", features = ["bundled"] }
keyring = "3.6.3"
chacha20poly1305 = "0.10.1"
rand = "0.9.4"
hex = "0.4.3"
image = { version = "0.25.6", features = ["webp"] }
sha2 = "0.10.9"
base64 = "0.22.1"
local-ip-address = "0.6.13"
tauri-plugin-clipboard-manager = "2"
tauri-plugin-os = "2"
aes-gcm-siv = "0.11.1"
whoami = "2.1.2"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-autostart = "2"
arboard = "3.6.1"
tauri-plugin-global-shortcut = "2.0.0"
enigo = "0.1.2"
tauri-plugin-updater = "2.10.1"

[target.'cfg(any(target_os = "android", target_os = "ios"))'.dependencies]
tauri-plugin-barcode-scanner = "2"
